X:000:Adding Facebook Login logic because I can:Beast1.0-16

--- a/TheBeast/app/src/main/res/layout/content_main.xml
+++ b/TheBeast/app/src/main/res/layout/content_main.xml
@@ -12,19 +12,22 @@
     tools:context="com.thebeast.com.thebeast.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="vertical" >
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/main_activity_header"
+        android:id="@+id/tv_main_activity_header"
+        android:textSize="30sp"
+        android:textIsSelectable="false"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:gravity="center_horizontal"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="This is the beast." />
-    </LinearLayout>
+    <Button
+        android:id="@+id/b_go_to_fb_login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/go_to_fb_login"
+        android:layout_below="@+id/tv_main_activity_header"
+        android:layout_centerHorizontal="true"/>
 </RelativeLayout>
