--- a/TheBeast/app/src/main/res/layout/drawer_layout.xml
+++ b/TheBeast/app/src/main/res/layout/drawer_layout.xml
@@ -9,12 +9,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+        <include
+            layout="@layout/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            android:layout_height="wrap_content"/>
         <!-- The main content view -->
         <FrameLayout
             android:id="@+id/content_frame"
