--- a/TheBeast/app/src/main/res/layout/tab_layout.xml
+++ b/TheBeast/app/src/main/res/layout/tab_layout.xml
@@ -8,8 +8,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/tabLayout"
-        android:background="@color/colorPrimaryDark"
-        app:tabTextColor="@color/colorAccent"
+        android:background="@color/colorPrimary"
+        app:tabTextColor="@color/whiteSecondaryText"
+        app:tabSelectedTextColor="@color/whitePrimaryText"
+        app:tabIndicatorColor="@color/colorAccent"
         app:tabGravity="fill"
         app:tabMode="fixed"/>
     <android.support.v4.view.ViewPager
