--- a/TheBeast/app/src/main/res/values/colors.xml
+++ b/TheBeast/app/src/main/res/values/colors.xml
@@ -4,5 +4,10 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
-    <color name="black_overlay">#66000000</color>
+    <color name="blackPrimaryText">#DE000000</color>
+    <color name="blackSecondaryText">#8A000000</color>
+    <color name="whitePrimaryText">#FFFFFF</color>
+    <color name="whiteSecondaryText">#B3FFFFFF</color>
+
+    <color name="black_overlay">#000000</color>
 </resources>
