--- a/TheBeast/app/src/main/res/layout/content_main.xml
+++ b/TheBeast/app/src/main/res/layout/content_main.xml
@@ -30,4 +30,12 @@
         android:text="@string/go_to_fb_login"
         android:layout_below="@+id/tv_main_activity_header"
         android:layout_centerHorizontal="true"/>
+
+    <Button
+        android:id="@+id/b_go_to_maps_activity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/go_to_maps_activity"
+        android:layout_below="@+id/b_go_to_fb_login"
+        android:layout_centerHorizontal="true"/>
 </RelativeLayout>
