--- a/TheBeast/app/src/main/res/layout/login_to_facebook_fragment.xml
+++ b/TheBeast/app/src/main/res/layout/login_to_facebook_fragment.xml
@@ -24,23 +24,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_above="@+id/username"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentRight="false"
-        android:layout_alignParentLeft="false"
-        android:layout_marginBottom="15dp"
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"/>
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/tv_facebook_signon_header"
+        android:layout_centerHorizontal="true"/>
 
     <TextView
         android:id="@+id/username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/user_name"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="80dp"/>
+        android:layout_below="@+id/login_button"
+        android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
