--- a/TheBeast/app/src/main/res/layout/test_layout_3.xml
+++ b/TheBeast/app/src/main/res/layout/test_layout_3.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
@@ -11,4 +12,16 @@
         android:text="Fragment 3"
         android:id="@+id/textView"
         android:layout_gravity="center_horizontal"/>
+
+    <fragment
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/map"
+        tools:context=".MapsActivity"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        tools:layout="@layout/test_layout_3"
+        android:layout_margin="30sp" />
+
 </LinearLayout>
