--- a/TheBeast/app/src/main/res/layout/drawer_layout.xml
+++ b/TheBeast/app/src/main/res/layout/drawer_layout.xml
@@ -17,7 +17,17 @@
         <FrameLayout
             android:id="@+id/content_frame"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent" >
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end"
+                android:layout_margin="@dimen/fab_margin"
+                android:src="@drawable/ic_add_white_24dp"/>
+
+        </FrameLayout>
     </LinearLayout>
     <android.support.design.widget.NavigationView
         android:id="@+id/nvView"
