--- a/TheBeast/app/src/main/res/layout/content_create_game.xml
+++ b/TheBeast/app/src/main/res/layout/content_create_game.xml
@@ -82,7 +82,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="textMultiLine"
                 android:ems="10"
-                android:id="@+id/editText"
+                android:id="@+id/additional_info"
                 android:hint="@string/additional_info_title"/>
         </android.support.design.widget.TextInputLayout>
     </RelativeLayout>
@@ -122,7 +122,7 @@
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceLarge"
                         android:text="Large Text"
-                        android:id="@+id/timeText"
+                        android:id="@+id/time_text"
                         />
                 </RelativeLayout>
 
@@ -153,16 +153,25 @@
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:id="@+id/view">
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:ems="10"
-                android:id="@+id/editText2"
+                android:id="@+id/team_size"
                 android:hint="@string/team_size_picker_title"/>
         </android.support.design.widget.TextInputLayout>
+
     </RelativeLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/create_button_text"
+        android:id="@+id/create_button"
+        android:layout_gravity="center_horizontal"/>
 
 </LinearLayout>
 </ScrollView>
