--- a/TheBeast/app/src/main/res/layout/activity_maps.xml
+++ b/TheBeast/app/src/main/res/layout/activity_maps.xml
@@ -1,23 +1,8 @@
-<!--<?xml version="1.0" encoding="utf-8"?>-->
-<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-              <!--android:id="@+id/activity_maps_frame"-->
-              <!--android:orientation="vertical"-->
-              <!--android:layout_width="match_parent"-->
-              <!--android:layout_height="match_parent">-->
-
-    <!--<com.google.android.maps.MapView-->
-        <!--android:id="@+id/map"-->
-        <!--android:apiKey="AIzaSyA3Ieo-F9EADRF9lZB91Aw57-rOGcTs8-c"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="200dip"-->
-        <!--android:clickable="true" />-->
-
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:id="@+id/map"
-              tools:context=".MapsActivity"
-              android:name="com.google.android.gms.maps.SupportMapFragment" />
-
-<!--</LinearLayout>-->
+<fragment android:id="@+id/map"
+          android:name="com.google.android.gms.maps.SupportMapFragment"
+          xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:map="http://schemas.android.com/apk/res-auto"
+          xmlns:tools="http://schemas.android.com/tools"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          tools:context="com.thebeast.com.thebeast.MapsActivity"/>
