--- a/TheBeast/app/src/main/res/layout/test_layout_3.xml
+++ b/TheBeast/app/src/main/res/layout/test_layout_3.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
@@ -13,15 +12,16 @@
         android:id="@+id/textView"
         android:layout_gravity="center_horizontal"/>
 
-    <fragment
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/map"
-        tools:context=".MapsActivity"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
-        tools:layout="@layout/test_layout_3"
-        android:layout_margin="30sp" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/b_go_to_map_viewer"
+        android:text="Go to Map Viewer"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/b_go_to_fb_login"
+        android:text="@string/go_to_fb_login"/>
 
 </LinearLayout>
