--- a/TheBeast/app/src/main/res/layout/activity_create_game.xml
+++ b/TheBeast/app/src/main/res/layout/activity_create_game.xml
@@ -62,12 +62,34 @@
                     android:layout_marginTop="10dp"/>
             </LinearLayout>
 
+            <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
+                <!--android:text="@string/place_picker_title"-->
+                <!--android:id="@+id/textView2"-->
+                <!--android:layout_weight=".2"/>-->
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight=".2">
+                <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:inputType="textMultiLine"
+                    android:ems="10"
+                    android:id="@+id/location"
+                    android:hint="Address of Location"/>
+            </android.support.design.widget.TextInputLayout>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="@string/place_picker_title"
-                android:id="@+id/textView2"
+                android:text="Invalid Address, please try another one."
+                android:textColor="#ff0000"
+                android:id="@+id/error_text"
                 android:layout_weight=".2"/>
 
             <android.support.design.widget.TextInputLayout
