--- a/TheBeast/app/src/main/res/layout/list_item_view.xml
+++ b/TheBeast/app/src/main/res/layout/list_item_view.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:divider="?android:listDivider"
-    android:showDividers="end">
+    android:layout_height="wrap_content"
+    android:gravity="center">
 
     <TextView
         android:layout_width="wrap_content"
@@ -16,4 +14,4 @@
         android:paddingTop="15dp"
         android:paddingBottom="15dp"
         />
-</LinearLayout>
+</RelativeLayout>
