--- a/TheBeast/app/src/main/res/layout/tab_layout.xml
+++ b/TheBeast/app/src/main/res/layout/tab_layout.xml
@@ -10,10 +10,11 @@
         android:id="@+id/tabLayout"
         android:background="@color/colorPrimary"
         app:tabTextColor="@color/whiteSecondaryText"
+        app:tabContentStart="60dp"
         app:tabSelectedTextColor="@color/whitePrimaryText"
         app:tabIndicatorColor="@color/colorAccent"
         app:tabGravity="fill"
-        app:tabMode="fixed"/>
+        app:tabMode="scrollable"/>
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
