Clean up game lists with better layout and more information

--- a/TheBeast/app/src/main/res/layout/list_item_view.xml
+++ b/TheBeast/app/src/main/res/layout/list_item_view.xml
@@ -2,16 +2,47 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center">
+    android:layout_height="88dp"
+    android:gravity="center"
+    >
 
-    <TextView
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/item_text"
-        android:layout_gravity="center"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:paddingTop="15dp"
-        android:paddingBottom="15dp"
-        />
+        android:id="@+id/sportIcon"
+        android:paddingLeft="16dp"
+        android:paddingTop="16dp"
+        android:contentDescription="sport icon"/>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingLeft="72dp"
+        android:paddingRight="16dp"
+        android:paddingTop="16dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Text"
+            android:id="@+id/locationText"
+            style="@style/PrimaryText"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Text"
+            android:id="@+id/timeText"
+            style="@style/SecondaryText"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Text"
+            android:id="@+id/teamSizeText"
+            style="@style/SecondaryText"/>
+
+    </LinearLayout>
+
 </RelativeLayout>
