--- a/TheBeast/app/src/main/res/menu/drawer_view.xml
+++ b/TheBeast/app/src/main/res/menu/drawer_view.xml
@@ -3,12 +3,12 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_first_fragment"
-            android:title="First" />
+            android:title="Upcoming Games" />
         <item
             android:id="@+id/nav_second_fragment"
-            android:title="Second" />
+            android:title="Profile" />
         <item
             android:id="@+id/nav_third_fragment"
-            android:title="Third" />
+            android:title="View on Maps" />
     </group>
 </menu>
