--- a/TheBeast/app/src/main/res/layout/drawer_layout.xml
+++ b/TheBeast/app/src/main/res/layout/drawer_layout.xml
@@ -35,6 +35,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:background="@android:color/white"
-        app:menu="@menu/drawer_view">
+        app:menu="@menu/drawer_view"
+        android:paddingTop="17dp">
     </android.support.design.widget.NavigationView>
 </android.support.v4.widget.DrawerLayout>
