Improve form validation to not allow null values

--- a/TheBeast/app/src/main/res/layout/list_item_view.xml
+++ b/TheBeast/app/src/main/res/layout/list_item_view.xml
@@ -12,7 +12,8 @@
         android:id="@+id/sportIcon"
         android:contentDescription="sport icon"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="16dp"
+        />
 
     <LinearLayout
         android:orientation="vertical"
