--- a/TheBeast/app/src/main/res/values/styles.xml
+++ b/TheBeast/app/src/main/res/values/styles.xml
@@ -46,4 +46,10 @@
         <item name="android:textColor">@color/blackSecondaryText</item>
     </style>
 
+    <style name="Title">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/blackPrimaryText</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+    </style>
+
 </resources>
