--- a/TheBeast/app/src/main/res/layout/sport_stat_layout.xml
+++ b/TheBeast/app/src/main/res/layout/sport_stat_layout.xml
@@ -1,13 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <TextView
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Large Text"
-        android:id="@+id/sport_text"/>
-</LinearLayout>
+        android:id="@+id/sportIcon"
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="16dp"/>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingLeft="72dp"
+        android:paddingTop="16dp"
+        android:paddingRight="16dp"
+        >
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/games_played"
+                android:id="@+id/gamesPlayed"
+                style="@style/PrimaryText"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/record"
+                android:id="@+id/recordText"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                style="@style/PrimaryText"/>
+        </RelativeLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Text"
+            android:id="@+id/specific_stat_1"
+            style="@style/SecondaryText"
+            android:paddingTop="15dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Text"
+            android:id="@+id/specific_stat_2"
+            style="@style/SecondaryText"
+            android:paddingTop="15dp"/>
+    </LinearLayout>
+
+</RelativeLayout>
